--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background: #b0fcff
+    background: #ded0ff8f
 }
 
 #banner {
@@ -19,7 +19,7 @@ p {
 }
 
 em strong {
-    color: #030f77;
+    color: #4b0377;
 }
 
 .itens{
@@ -27,7 +27,7 @@ em strong {
 }
 
 .benefícios{
-    background: #0c8eaf;
+    background: #600caf;
 }
 
 
