--- a/style.css
+++ b/style.css
@@ -32,7 +32,14 @@ em strong {
 }
 
 h2{
-    text-align: left;
+    text-align: center;
+}
+
+ul {
+    display: inline-block;
+    vertical-align: top;
+    width: 20%;
+    margin-right: 15%;
 }
 
 .imagembeneficios{ 
