--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {}
 }
 
 .principal{  
-    background:rgb(232, 183, 252), 0.473)}
+    background:rgb(232, 183, 252)}
 
 h1 {
     text-align: center
