--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
 body {
 
 }
-
 .principal{
     background: rgba(219, 129, 255, 0.616), 204, 204);
-    padding: 30px;
+    padding: 30px;}
 #banner {
     width: 100%;
 }
