--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
 
 }
 .principal{
-    background: rgba(231, 169, 255, 0.616), 204, 204);
+    background: rgba(231, 169, 255, 0.616);
     padding: 30px;}
 #banner {
     width: 100%;
